[tool.poetry]
name = "python_design_patterns"
version = "0.1.0"
description = ""
authors = ["OlgaPaw <olga.pawlowicz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
