[tool.poetry]
name = "python_design_patterns"
version = "0.1.0"
description = ""
authors = ["OlgaPaw <olga.pawlowicz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.782"
pylint = "^2.5.3"
pytest-cov = "^2.10.0"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
